--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ name: organize-backend
 type: kubernetes
 steps:
   - name: build
-    image: node:18
+    image: node:20-alpine
     commands:
       - npm install
       - npm run build
