--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -2,7 +2,9 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-RUN [ "cp", "./*", "/app", "-R" ]
+ADD dist /app/dist
+ADD package.json /app/package.json
+ADD package-lock.json /app/package-lock.json
 
 RUN [ "npm", "install" ]
 
